syntax = "proto3";

package online_shop;

option go_package = "github.com/lvlBA/online_shop;online_shop";

message Pagination {
  int64 page = 1;
  int64 limit = 2;
}